src/test/deca/context/valid/operation_cmp.deca
// Description:
//    operation cmp simple valide 
//
// Resultats:
//    
// 
// Historique:
//    cree le 07/01/2025


{
    int a = 5;
    int b = 10;
    int c = 5;

    // Comparaison simple
    boolean cmp1 = (a == c);  
    boolean cmp2 = (a != b);  
    boolean cmp3 = (b > a);   

    // Opérations logiques
    boolean result1 = cmp1 && cmp2; 
    boolean result2 = cmp1 || cmp3;  
    boolean result3 = !cmp2;         

   
}
