src/test/deca/context/invalid/cast_incompatible.deca
// Description:
//    Cast impossible
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class B{
    
}

class A {   
    
}
{
    B a;
    A c;
    c = (A) (a);
}